[gd_scene load_steps=2 format=3 uid="uid://bk7keckkd78ia"]

[ext_resource type="Script" uid="uid://0jlrerhhthn0" path="res://src/game/overlay/popup_center/popups/game_end.gd" id="1_jx7rf"]

[node name="GameEnd" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -61.0
offset_top = -57.5
offset_right = 61.0
offset_bottom = 57.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jx7rf")
pause_game = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="GameLost" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "GAME_LOST"

[node name="ReachedWave" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6

[node name="RestartButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "RESTART"

[connection signal="pressed" from="MarginContainer/VBoxContainer/RestartButton" to="." method="restart_game"]
